src/snapshots/openapi_to_rust__test_helpers__simple_tools_array_test.snap
---
source: src/test_helpers.rs
expression: "&generated_code"
---
//! Generated types from OpenAPI specification
//!
//! This file contains all the generated types for the API.
//! Do not edit manually - regenerate using the appropriate script.
#![allow(clippy::large_enum_variant)]
#![allow(clippy::format_in_format_args)]
#![allow(clippy::let_unit_value)]
#![allow(unreachable_patterns)]
use serde::{Deserialize, Serialize};
#[derive(Debug, Clone, Deserialize, Serialize, Default)]
pub struct SimpleRequest {
    #[serde(skip_serializing_if = "Option::is_none")]
    pub tools: Option<Vec<SimpleTool>>,
}
#[derive(Debug, Clone, Deserialize, Serialize)]
pub struct SimpleTool {
    #[serde(skip_serializing_if = "Option::is_none")]
    pub description: Option<String>,
    pub name: String,
}
