src/snapshots/openapi_to_rust__test_helpers__tools_array_union_test.snap
---
source: src/test_helpers.rs
expression: "&generated_code"
---
//! Generated types from OpenAPI specification
//!
//! This file contains all the generated types for the API.
//! Do not edit manually - regenerate using the appropriate script.
#![allow(clippy::large_enum_variant)]
#![allow(clippy::format_in_format_args)]
#![allow(clippy::let_unit_value)]
#![allow(unreachable_patterns)]
use serde::{Deserialize, Serialize};
#[derive(Debug, Clone, Deserialize, Serialize)]
pub struct CreateMessageParams {
    pub messages: Vec<Message>,
    pub model: String,
    ///Tools available to the model
    #[serde(skip_serializing_if = "Option::is_none")]
    pub tools: Option<Vec<CreateMessageParamsToolsItemUnion>>,
}
#[derive(Debug, Clone, Deserialize, Serialize)]
pub struct Message {
    pub content: String,
    pub role: String,
}
#[derive(Debug, Clone)]
pub enum CreateMessageParamsToolsItemUnion {
    Tool(Tool),
    BashTool(BashTool),
}
impl Serialize for CreateMessageParamsToolsItemUnion {
    fn serialize<S>(&self, serializer: S) -> Result<S::Ok, S::Error>
    where
        S: serde::Serializer,
    {
        match self {
            Self::Tool(value) => serde::Serialize::serialize(value, serializer),
            Self::BashTool(value) => serde::Serialize::serialize(value, serializer),
        }
    }
}
impl<'de> Deserialize<'de> for CreateMessageParamsToolsItemUnion {
    fn deserialize<D>(deserializer: D) -> Result<Self, D::Error>
    where
        D: serde::Deserializer<'de>,
    {
        fn exact_json_integer(number: &serde_json::Number) -> Option<i128> {
            number.as_i64().map(i128::from).or_else(|| number.as_u64().map(i128::from))
        }
        fn json_numbers_have_same_value(
            encoded: &serde_json::Number,
            input: &serde_json::Number,
        ) -> bool {
            match (exact_json_integer(encoded), exact_json_integer(input)) {
                (Some(encoded), Some(input)) => encoded == input,
                (Some(encoded), None) => {
                    input
                        .as_f64()
                        .is_some_and(|input| {
                            input.is_finite() && input.fract() == 0.0
                                && input as i128 == encoded
                        })
                }
                (None, Some(input)) => {
                    encoded
                        .as_f64()
                        .is_some_and(|encoded| {
                            encoded.is_finite() && encoded.fract() == 0.0
                                && encoded as i128 == input
                        })
                }
                (None, None) => encoded.as_f64() == input.as_f64(),
            }
        }
        /// `nulls_may_be_absent` also accepts an input `null` that the
        /// branch omits, as a skipped `None` does. Extra encoded
        /// keys are allowed only by the pre-existing anyOf match.
        fn preserves_complete_json_input(
            encoded: &serde_json::Value,
            input: &serde_json::Value,
            nulls_may_be_absent: bool,
            encoded_keys_may_be_extra: bool,
        ) -> bool {
            match (encoded, input) {
                (
                    serde_json::Value::Object(encoded),
                    serde_json::Value::Object(input),
                ) => {
                    (encoded_keys_may_be_extra
                        || encoded.keys().all(|key| input.contains_key(key)))
                        && input
                            .iter()
                            .all(|(key, value)| match encoded.get(key) {
                                Some(encoded_value) => {
                                    preserves_complete_json_input(
                                        encoded_value,
                                        value,
                                        nulls_may_be_absent,
                                        encoded_keys_may_be_extra,
                                    )
                                }
                                None => nulls_may_be_absent && value.is_null(),
                            })
                }
                (serde_json::Value::Array(encoded), serde_json::Value::Array(input)) => {
                    encoded.len() == input.len()
                        && encoded
                            .iter()
                            .zip(input)
                            .all(|(encoded, input)| {
                                preserves_complete_json_input(
                                    encoded,
                                    input,
                                    nulls_may_be_absent,
                                    encoded_keys_may_be_extra,
                                )
                            })
                }
                (
                    serde_json::Value::Number(encoded),
                    serde_json::Value::Number(input),
                ) => json_numbers_have_same_value(encoded, input),
                _ => encoded == input,
            }
        }
        let input = <serde_json::Value as Deserialize>::deserialize(deserializer)?;
        let mut matched = None;
        let mut equivalent = None;
        let mut equivalent_matches = 0usize;
        if input
            .as_object()
            .is_some_and(|object| {
                true
                    && object
                        .get("type")
                        .is_none_or(|value| {
                            value.is_null()
                                || matches!(value.to_string().as_str(), "\"custom\"")
                        })
            })
        {
            if let Ok(candidate) = serde_json::from_value::<Tool>(input.clone()) {
                match serde_json::to_value(&candidate) {
                    Ok(encoded) if encoded == input => {
                        if matched.is_some() {
                            return Err(
                                serde::de::Error::custom(
                                    concat!(
                                        "ambiguous oneOf value for ",
                                        stringify!(CreateMessageParamsToolsItemUnion),
                                        ": more than one branch preserved the complete input",
                                    ),
                                ),
                            );
                        }
                        matched = Some(Self::Tool(candidate));
                    }
                    Ok(
                        encoded,
                    ) if preserves_complete_json_input(
                        &encoded,
                        &input,
                        true,
                        false,
                    ) => {
                        equivalent_matches += 1;
                        equivalent.get_or_insert(Self::Tool(candidate));
                    }
                    _ => {}
                }
            }
        }
        if input
            .as_object()
            .is_some_and(|object| {
                true
                    && object
                        .get("type")
                        .is_none_or(|value| {
                            value.is_null()
                                || matches!(value.to_string().as_str(), "\"bash\"")
                        })
            })
        {
            if let Ok(candidate) = serde_json::from_value::<BashTool>(input.clone()) {
                match serde_json::to_value(&candidate) {
                    Ok(encoded) if encoded == input => {
                        if matched.is_some() {
                            return Err(
                                serde::de::Error::custom(
                                    concat!(
                                        "ambiguous oneOf value for ",
                                        stringify!(CreateMessageParamsToolsItemUnion),
                                        ": more than one branch preserved the complete input",
                                    ),
                                ),
                            );
                        }
                        matched = Some(Self::BashTool(candidate));
                    }
                    Ok(
                        encoded,
                    ) if preserves_complete_json_input(
                        &encoded,
                        &input,
                        true,
                        false,
                    ) => {
                        equivalent_matches += 1;
                        equivalent.get_or_insert(Self::BashTool(candidate));
                    }
                    _ => {}
                }
            }
        }
        if let Some(matched) = matched {
            return Ok(matched);
        }
        if equivalent_matches > 1 {
            return Err(
                serde::de::Error::custom(
                    concat!(
                        "ambiguous oneOf value for ",
                        stringify!(CreateMessageParamsToolsItemUnion),
                        ": more than one branch preserved an equivalent input",
                    ),
                ),
            );
        }
        equivalent
            .ok_or_else(|| serde::de::Error::custom(
                concat!(
                    "no oneOf branch for ",
                    stringify!(CreateMessageParamsToolsItemUnion),
                    " preserved the complete input",
                ),
            ))
    }
}
#[derive(Debug, Clone, Deserialize, Serialize)]
pub struct Tool {
    #[serde(skip_serializing_if = "Option::is_none")]
    pub description: Option<String>,
    pub input_schema: InputSchema,
    pub name: String,
    #[serde(skip_serializing_if = "Option::is_none")]
    pub r#type: Option<serde_json::Value>,
}
#[derive(Debug, Clone, Deserialize, Serialize, Default)]
pub struct InputSchema {
    #[serde(skip_serializing_if = "Option::is_none")]
    pub properties: Option<serde_json::Value>,
    #[serde(skip_serializing_if = "Option::is_none")]
    pub r#type: Option<String>,
}
#[derive(Debug, Clone, Deserialize, Serialize)]
pub struct BashTool {
    pub name: String,
    #[serde(skip_serializing_if = "Option::is_none")]
    pub r#type: Option<serde_json::Value>,
}
