src/snapshots/openapi_to_rust__test_helpers__two_scalar_type_array_order.snap
---
source: src/test_helpers.rs
expression: "&generated_code"
---
//! Generated types from OpenAPI specification
//!
//! This file contains all the generated types for the API.
//! Do not edit manually - regenerate using the appropriate script.
#![allow(clippy::large_enum_variant)]
#![allow(clippy::format_in_format_args)]
#![allow(clippy::let_unit_value)]
#![allow(unreachable_patterns)]
use serde::{Deserialize, Serialize};
#[derive(Debug, Clone, Deserialize, Serialize, Default)]
pub struct Widget {
    #[serde(skip_serializing_if = "Option::is_none")]
    pub id_or_code: Option<WidgetIdOrCode>,
}
#[derive(Debug, Clone, Deserialize, Serialize)]
#[serde(untagged)]
pub enum WidgetIdOrCode {
    String(String),
    Integer(i64),
}
