src/snapshots/openapi_to_rust__test_helpers__type_property_only_test.snap
---
source: src/test_helpers.rs
expression: "&generated_code"
---
//! Generated types from OpenAPI specification
//!
//! This file contains all the generated types for the API.
//! Do not edit manually - regenerate using the appropriate script.
#![allow(clippy::large_enum_variant)]
#![allow(clippy::format_in_format_args)]
#![allow(clippy::let_unit_value)]
#![allow(unreachable_patterns)]
use serde::{Deserialize, Serialize};
#[derive(Debug, Clone, Deserialize, Serialize)]
pub struct TypedEvent {
    pub r#type: TypedEventType,
}
#[derive(Debug, Clone, PartialEq, Eq, Deserialize, Serialize, Default)]
pub enum TypedEventType {
    #[default]
    #[serde(rename = "event.created")]
    EventCreated,
}
impl TypedEventType {
    pub fn as_str(&self) -> &'static str {
        match self {
            Self::EventCreated => "event.created",
        }
    }
}
impl ::std::fmt::Display for TypedEventType {
    fn fmt(&self, f: &mut ::std::fmt::Formatter<'_>) -> ::std::fmt::Result {
        f.write_str(self.as_str())
    }
}
impl AsRef<str> for TypedEventType {
    fn as_ref(&self) -> &str {
        self.as_str()
    }
}
